--- a/Project4-HTML5/askisi14.html
+++ b/Project4-HTML5/askisi14.html
@@ -9,7 +9,15 @@
 <body>
 
     <p>
-        <!-- παράδειγμα εικόνας ως σύνδεσμος -->
+        <!-- παράδειγμα εικόνας ως σύνδεσμος
+
+            εξωτερικό στοιχείο σύνδεσμος που οδηγεί στην εικόνα πλήρους μεγέθους (href)
+
+            περιεχόμενο συνδέσμου : η μικρογραφία της εικόνας (img)
+
+        -->
+
+
         <a href="_images/1200px-HTML5_logo_and_wordmark.svg.png"><img src="_images/200px-HTML5_logo_and_wordmark.svg.jpg" alt="HTML5 Logo"></a>
 
         <!-- Εικόνα 1 με σύνδεσμο σε πλήρους μεγέθους γραφικό -->
