--- a/Project4-HTML5/example2-1.html
+++ b/Project4-HTML5/example2-1.html
@@ -4,10 +4,9 @@
     <meta charset="utf-8">
     <title>Η πρώτη μου σελίδα</title>
 </head>
-
 <body>
     <h1>Επικεφαλίδα παραγράφου</h1>
-    <p title="Επεξήγηση">Αυτή είναι μια παράγραφος.</p>
+    <p title="Σύντομη επεξήγηση παραγράφου">Αυτή είναι μια παράγραφος.</p>
     <p>Αυτή είναι μια δεύτερη παράγραφος.</p>
 </body>
 </html>
