--- a/Project4-HTML5/example2-25.html
+++ b/Project4-HTML5/example2-25.html
@@ -43,7 +43,7 @@
     <h2> Ενότητες με χρήση &lt;div&gt;</h2>
     <div id="header">
         <div id="logo">
-            <img src="logo.png" alt="Logo" width="95px">
+            <img src="logo.png" alt="Logo" style="width:95px">
         </div>
         <div id="languageBar">
             Language: <a href="#">Αγγλικά </a> | Ελληνικά
