Project 7 - Blog / aside info

--- a/Project7-Blog/myBlog.html
+++ b/Project7-Blog/myBlog.html
@@ -64,7 +64,7 @@
 
     Αγαπημένη Φράση όλων των Εποχών
 
-        [... Ποια είναι η φράση .... Γιατί σας αρέσει ;   ]
+        [Συμπληρωματικό περιεχόμενο... Ποια είναι η φράση και με ποια εικόνα την έχετε συνδέσει ; Γιατί σας αρέσει ;   ]
 
 
      Σχόλια Επισκεπτών
